# ministat

./: .gitignore  .ministat.c.swp  Makefile  README.md  an_qsort.c  gen_flamegraph.sh  ministat.c
mapm/: validate
test/: README.md  bench.gnuplot  benchmark.sh  gen_data.sh  gen_executables.sh  generate_data.sh
test/chart_gen/: bench.ipynb  bench.py  pyproject.toml
test/data_gen/: Makefile  gen  gen.c
