[tool.poetry]
name = "nb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
nbconvert = "^6.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
